@@ -77,15 +77,19 @@ class ResourceWebHandlerTests {
 
 	private static final Duration TIMEOUT = Duration.ofSeconds(1);
 
+	private final ClassPathResource testResource = new ClassPathResource("test/", getClass());
+	private final ClassPathResource testAlternatePathResource = new ClassPathResource("testalternatepath/", getClass());
+	private final ClassPathResource webjarsResource = new ClassPathResource("META-INF/resources/webjars/");
+
 	private ResourceWebHandler handler;
 
 
 	@BeforeEach
 	void setup() throws Exception {
 		List<Resource> locations = List.of(
-				new ClassPathResource("test/", getClass()),
-				new ClassPathResource("testalternatepath/", getClass()),
-				new ClassPathResource("META-INF/resources/webjars/"));
+				this.testResource,
+				this.testAlternatePathResource,
+				this.webjarsResource);
 
 		this.handler = new ResourceWebHandler();
 		this.handler.setLocations(locations);
@@ -107,7 +111,7 @@ class ResourceWebHandlerTests {
 		assertThat(headers.containsKey("Last-Modified")).isTrue();
 		assertThat(resourceLastModifiedDate("test/foo.css") / 1000).isEqualTo(headers.getLastModified() / 1000);
 		assertThat(headers.getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(headers.get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(headers.get("Accept-Ranges")).hasSize(1);
 		assertResponseBody(exchange, "h1 { color:red; }");
 	}
 
@@ -153,14 +157,14 @@ class ResourceWebHandlerTests {
 		assertThat(response.getHeaders().containsKey("Last-Modified")).isTrue();
 		assertThat(resourceLastModifiedDate("test/foo.css") / 1000).isEqualTo(response.getHeaders().getLastModified() / 1000);
 		assertThat(response.getHeaders().getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(response.getHeaders().get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(response.getHeaders().get("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
 	void getVersionedResource() throws Exception {
 		VersionResourceResolver versionResolver = new VersionResourceResolver();
 		versionResolver.addFixedVersionStrategy("versionString", "/**");
-		this.handler.setResourceResolvers(Arrays.asList(versionResolver, new PathResourceResolver()));
+		this.handler.setResourceResolvers(List.of(versionResolver, new PathResourceResolver()));
 		this.handler.afterPropertiesSet();
 
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
@@ -169,7 +173,7 @@ class ResourceWebHandlerTests {
 
 		assertThat(exchange.getResponse().getHeaders().getETag()).isEqualTo("W/\"versionString\"");
 		assertThat(exchange.getResponse().getHeaders().getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
@@ -184,7 +188,7 @@ class ResourceWebHandlerTests {
 		assertThat(headers.containsKey("Last-Modified")).isTrue();
 		assertThat(resourceLastModifiedDate("test/foo.html") / 1000).isEqualTo(headers.getLastModified() / 1000);
 		assertThat(headers.getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(headers.get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(headers.get("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
@@ -200,7 +204,7 @@ class ResourceWebHandlerTests {
 		assertThat(headers.containsKey("Last-Modified")).isTrue();
 		assertThat(resourceLastModifiedDate("testalternatepath/baz.css") / 1000).isEqualTo(headers.getLastModified() / 1000);
 		assertThat(headers.getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(headers.get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(headers.get("Accept-Ranges")).hasSize(1);
 		assertResponseBody(exchange, "h1 { color:red; }");
 	}
 
@@ -264,7 +268,7 @@ class ResourceWebHandlerTests {
 
 	@Test  // gh-27538, gh-27624
 	void filterNonExistingLocations() throws Exception {
-		List<Resource> inputLocations = Arrays.asList(
+		List<Resource> inputLocations = List.of(
 				new ClassPathResource("test/", getClass()),
 				new ClassPathResource("testalternatepath/", getClass()),
 				new ClassPathResource("nosuchpath/", getClass()));
@@ -420,10 +424,7 @@ class ResourceWebHandlerTests {
 		PathResourceResolver resolver = (PathResourceResolver) this.handler.getResourceResolvers().get(0);
 		Resource[] locations = resolver.getAllowedLocations();
 
-		assertThat(locations.length).isEqualTo(3);
-		assertThat(((ClassPathResource) locations[0]).getPath()).isEqualTo("test/");
-		assertThat(((ClassPathResource) locations[1]).getPath()).isEqualTo("testalternatepath/");
-		assertThat(((ClassPathResource) locations[2]).getPath()).isEqualTo("META-INF/resources/webjars/");
+		assertThat(locations).containsExactly(this.testResource, this.testAlternatePathResource, this.webjarsResource);
 	}
 
 	@Test
@@ -436,12 +437,10 @@ class ResourceWebHandlerTests {
 
 		ResourceWebHandler handler = new ResourceWebHandler();
 		handler.setResourceResolvers(List.of(pathResolver));
-		handler.setLocations(Arrays.asList(location1, location2));
+		handler.setLocations(List.of(location1, location2));
 		handler.afterPropertiesSet();
 
-		Resource[] locations = pathResolver.getAllowedLocations();
-		assertThat(locations.length).isEqualTo(1);
-		assertThat(((ClassPathResource) locations[0]).getPath()).isEqualTo("test/");
+		assertThat(pathResolver.getAllowedLocations()).containsExactly(location1);
 	}
 
 	@Test
@@ -546,7 +545,7 @@ class ResourceWebHandlerTests {
 		assertThat(exchange.getResponse().getHeaders().getContentLength()).isEqualTo(2);
 		assertThat(exchange.getResponse().getHeaders().getFirst("Content-Range")).isEqualTo("bytes 0-1/10");
 		assertThat(exchange.getResponse().getHeaders().getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges")).hasSize(1);
 		assertResponseBody(exchange, "So");
 	}
 
@@ -562,7 +561,7 @@ class ResourceWebHandlerTests {
 		assertThat(exchange.getResponse().getHeaders().getContentLength()).isEqualTo(1);
 		assertThat(exchange.getResponse().getHeaders().getFirst("Content-Range")).isEqualTo("bytes 9-9/10");
 		assertThat(exchange.getResponse().getHeaders().getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges")).hasSize(1);
 		assertResponseBody(exchange, ".");
 	}
 
@@ -578,7 +577,7 @@ class ResourceWebHandlerTests {
 		assertThat(exchange.getResponse().getHeaders().getContentLength()).isEqualTo(1);
 		assertThat(exchange.getResponse().getHeaders().getFirst("Content-Range")).isEqualTo("bytes 9-9/10");
 		assertThat(exchange.getResponse().getHeaders().getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges")).hasSize(1);
 		assertResponseBody(exchange, ".");
 	}
 
@@ -594,7 +593,7 @@ class ResourceWebHandlerTests {
 		assertThat(exchange.getResponse().getHeaders().getContentLength()).isEqualTo(1);
 		assertThat(exchange.getResponse().getHeaders().getFirst("Content-Range")).isEqualTo("bytes 9-9/10");
 		assertThat(exchange.getResponse().getHeaders().getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges")).hasSize(1);
 		assertResponseBody(exchange, ".");
 	}
 
@@ -610,7 +609,7 @@ class ResourceWebHandlerTests {
 		assertThat(exchange.getResponse().getHeaders().getContentLength()).isEqualTo(10);
 		assertThat(exchange.getResponse().getHeaders().getFirst("Content-Range")).isEqualTo("bytes 0-9/10");
 		assertThat(exchange.getResponse().getHeaders().getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges")).hasSize(1);
 		assertResponseBody(exchange, "Some text.");
 	}
 
